<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Activity titles -->
	<string name="app_name">CWiiDConfig</string>
	<string name="load_preset">Load Preset</string>
	<string name="save_preset">Save Preset</string>
	<string name="config_wiimote">Configure WiiMote</string>
	<string name="config_nunchuk">Configure Nunchuk</string>
	<string name="config_classic">Configure Classic Controller</string>
	
	<!-- Commonly used strings -->
	<string name="select_device">Select a device to configure:</string>
	<string name="select_button">Select a button to configure:</string>
	<string name="select_button_prompt">Select a controller button:</string>
	<string name="select_key_prompt">Select a keyboard key:</string>
	<string name="config_button">Button</string>
	<string name="config_key">Key Mapping</string>
	<string name="config_empty">The configuration does not presently define any key mappings.</string>
	
	<!-- Stock strings to be used all over the floor -->
	<string name="power_on">Start CWiiD</string>
	<string name="power_off">Stop CWiiD</string>
	<string name="load">Load</string>
	<string name="save">Save</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="close">Close</string>
	<string name="help">Help</string>
	<string name="view_config">View configuration</string>
	<string name="hide_config">Hide configuration</string>

	<!-- Preset meta labels -->
	<string name="preset_name">Preset name:</string>
	<string name="preset_description">Description:</string>

	<!-- Main activity -->
        <string name="main_daemon_notif">The CWiiD daemon is currently running and therefore you cannot alter its configuration.  To modify the CWiiD configuration, please first stop the currently running daemon.</string>

	<!--  Load preset activity -->
	<string name="load_preset_empty">Could not find any presets for you to load.</string>
	<string name="system_preset">(System Preset)</string>

	<!-- Save preset activity -->
	<string name="save_error_preset_name_empty">You must specify a preset name.</string>
	<string name="save_error_preset_name_system">The specified name is already used by a system preset.  Please select another one.</string>
	<string name="save_preset_overwrite_title">Overwrite Preset?</string>
	<string name="save_preset_overwrite_msg">The specified preset exists, do you want to overwrite it?</string>
	<string name="save_preset_overwrite_confirm">Overwrite</string>
	<string name="save_preset_overwrite_cancel">Cancel</string>
	<string name="save_preset_success">Preset saved successfully.</string>
	
	<!-- CWiiD Daemon status messages -->
	<string name="cwiid_initializing">Initializing CWiiD ...</string>
	<string name="cwiid_discovering">Please put your WiiMote into discoverable mode (Press 1+2) ...</string>
	<string name="cwiid_ready">Your WiiMote is now connected.</string>
	<string name="cwiid_stopping">Stopping CwiiD ...</string>
	<string name="cwiid_stopped">CWiiD stopped.</string>
	<string name="cwiid_error">There was an error starting CWiiD.</string>

	<!-- CWiiD Daemon service -->
	<string name="cwiid_daemon_service_title">CWiiD Service</string>
	<string name="cwiid_daemon_service_text">The CWiiD daemon is currently running.</string>
</resources>
