<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/config_classic_layout"
	android:background="#FFFFFF">

	<TextView android:id="@+id/config_classic_select_button"
		android:text="@string/select_button"
		android:textColor="#555555"
		android:textSize="20dip"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_marginTop="10dip" />
		
	
	<LinearLayout android:id="@+id/config_classic_select_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_marginTop="10dip"
			android:layout_centerHorizontal="true"
			android:orientation="horizontal">
			
		<LinearLayout android:id="@+id/config_classic_select_button_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<Spinner android:id="@+id/config_classic_wiibutton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:prompt="@string/select_button_prompt" />
					
			<TextView android:id="@+id/config_classic_wiibutton_txt"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_marginBottom="10dip"
					android:textColor="#555555"
					android:text="@string/config_button" />
					
		</LinearLayout>
				
		<LinearLayout android:id="@+id/config_classic_select_key_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<Spinner android:id="@+id/config_classic_keybutton"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:prompt="@string/select_key_prompt" />
		
			<TextView android:id="@+id/config_classic_keybutton_txt"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:layout_marginBottom="10dip"
					android:textColor="#555555"
					android:text="@string/config_key" />
					
		</LinearLayout>
		
	</LinearLayout>

	<LinearLayout android:id="@+id/config_classic_image_layout"
			android:layout_below="@id/config_classic_select_button"
			android:layout_above="@id/config_classic_select_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:orientation="horizontal"
			android:layout_margin="10dip">
	
		<RelativeLayout android:id="@+id/config_classic_image_front_layout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

			<ImageView android:id="@+id/config_classic_front_view"
				android:src="@drawable/classic_front"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
				
			<ImageView android:id="@+id/config_classic_front_view_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:visibility="gone" />
	
		</RelativeLayout>
	
	</LinearLayout>
	
</RelativeLayout>
