<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/save_preset_relative_layout"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#FFFFFF"
	android:paddingLeft="10dip"
	android:paddingRight="10dip">

	<LinearLayout android:id="@+id/save_preset_buttons"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:layout_marginBottom="10dip"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:orientation="horizontal">
		
		<LinearLayout android:id="@+id/save_preset_button_save_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<ImageButton android:id="@+id/save_preset_button_save"
				android:src="@android:drawable/ic_menu_save"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			
			<TextView android:id="@+id/save_preset_text_save"
				android:text="@string/save"
				android:textColor="#555555"
				android:gravity="center"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
				
		</LinearLayout>
		
		<LinearLayout android:id="@+id/save_preset_button_cancel_layout"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			
			<ImageButton android:id="@+id/save_preset_button_cancel"
				android:src="@android:drawable/ic_menu_close_clear_cancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" />
			
			<TextView android:id="@+id/save_preset_text_cancel"
				android:text="@string/cancel"
				android:textColor="#555555"
				android:gravity="center"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" />
				
		</LinearLayout>
	</LinearLayout>

	<TextView android:id="@+id/save_preset_name_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:layout_alignParentTop="true"
		android:gravity="left"
		android:textColor="#555555"
		android:textSize="18dip"
		android:text="@string/preset_name" />

	<EditText android:id="@+id/save_preset_name"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/save_preset_name_label"
		android:layout_marginTop="2dip" />

	<TextView android:id="@+id/save_preset_description_label"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dip"
		android:layout_below="@id/save_preset_name"
		android:gravity="left"
		android:textColor="#555555"
		android:textSize="18dip"
		android:text="@string/preset_description" />
		
	<EditText android:id="@+id/save_preset_description"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/save_preset_description_label"
		android:layout_above="@id/save_preset_buttons"
		android:layout_marginTop="10dip" />

</RelativeLayout>
