<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_layout"
	android:background="#FFFFFF">

	<TextView android:id="@+id/main_select_device"
		android:text="@string/select_device"
		android:textColor="#555555"
		android:textSize="20dip"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_marginTop="10dip" />

	<ImageButton android:id="@+id/main_load_preset_button"
		android:src="@android:drawable/ic_menu_upload"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginBottom="30dip" />

	<TextView android:id="@+id/main_load_preset_text"
		android:text="@string/load"
		android:textColor="#555555"
		android:gravity="center"
		android:layout_below="@id/main_load_preset_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@id/main_load_preset_button"
		android:layout_alignRight="@id/main_load_preset_button"
		android:layout_marginTop="-30dip" />

	<ImageButton android:id="@+id/main_save_preset_button"
		android:src="@android:drawable/ic_menu_save"
		android:layout_toRightOf="@id/main_load_preset_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginLeft="20dip"
		android:layout_marginBottom="30dip" />

	<TextView android:id="@+id/main_save_preset_text"
		android:text="@string/save"
		android:textColor="#555555"
		android:gravity="center"
		android:layout_below="@id/main_save_preset_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@id/main_save_preset_button"
		android:layout_alignLeft="@id/main_save_preset_button"
		android:layout_marginTop="-30dip" />

	<ImageButton android:id="@+id/main_power_toggle_button"
		android:src="@drawable/ic_menu_power_off"
		android:layout_toLeftOf="@id/main_load_preset_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_marginRight="20dip"
		android:layout_marginBottom="30dip" />
	<TextView android:id="@+id/main_power_toggle_text"
		android:text="@string/power_on"
		android:textColor="#555555"
		android:gravity="center"
		android:layout_below="@id/main_power_toggle_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignRight="@id/main_power_toggle_button"
		android:layout_alignLeft="@id/main_power_toggle_button"
		android:layout_marginTop="-30dip" />

	<ImageView android:id="@+id/main_wiimote_view"
		android:src="@drawable/wiimote_front"
		android:layout_above="@id/main_load_preset_button"
		android:layout_below="@id/main_select_device"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_marginTop="20dip"
		android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"
		android:layout_marginBottom="20dip" />

	<ImageView android:id="@+id/main_classic_view"
		android:src="@drawable/classic_front"
		android:layout_width="wrap_content"
		android:layout_height="175dip"
		android:layout_above="@id/main_load_preset_button"
		android:layout_toRightOf="@id/main_wiimote_view"
		android:layout_alignParentRight="true"
		android:layout_marginTop="10dip"
		android:layout_marginRight="10dip"
		android:layout_marginBottom="20dip" />

	<ImageView android:id="@+id/main_nunchuk_view"
		android:src="@drawable/nunchuk_side"
		android:layout_above="@id/main_classic_view"
		android:layout_toRightOf="@id/main_wiimote_view"
		android:layout_below="@id/main_select_device"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_marginRight="10dip"
		android:layout_marginTop="20dip" />

	<TextView android:id="@+id/main_daemon_running_text"
		android:text="@string/main_daemon_notif"
		android:textColor="#777777"
		android:textSize="18dip"
		android:gravity="center"
		android:layout_centerInParent="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:visibility="gone"
		android:layout_margin="10dip" />

</RelativeLayout>
